bk_ida/gobmkida/g1/propose_edge_moves
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/propose_edge_moves/src/engine/reading.c:2711:7: error: use of undeclared identifier 'dword_760CDC'
v24 = dword_760CDC[v23]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/propose_edge_moves/src/obj/1/reading.o] Error 1
